<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:src="@drawable/hot_logo_167"/>

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_logo_name"
        android:textSize="40sp"
        android:transitionName="logo_text"
        android:fontFamily="@font/alfa_slab_one"
        android:textColor="@color/grey"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chivo_regular"
        android:text="@string/login_slogan"
        android:textSize="16sp"
        android:transitionName="logo_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/hint_username"
            android:transitionName="username_tran"
            app:startIconDrawable="@drawable/ic_user_fill"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/hint_password"
            android:transitionName="password_tran"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password_fill"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingLeft="40dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_blue"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:transitionName="button_tran"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/signup_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/register_here"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/chivo_regular"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:transitionName="login_signup_tran"
            android:textAllCaps="false"/>

    </LinearLayout>
</LinearLayout>