<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/hot_logo_167"
        android:transitionName="logo_image"/>
    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_logo_name"
        android:textSize="36sp"
        android:fontFamily="@font/alfa_slab_one"
        android:textColor="@color/grey"
        android:layout_marginTop="-20dp"
        android:transitionName="logo_text"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_slogan"
        android:textSize="16sp"
        android:transitionName="logo_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:transitionName="name_tran"
            app:startIconDrawable="@drawable/ic_name_fill"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            app:counterMaxLength="15"
            android:transitionName="username_tran"
            app:startIconDrawable="@drawable/ic_user_fill"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:transitionName="email_tran"
            app:startIconDrawable="@drawable/ic_mail_fill"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true"
            android:transitionName="password_tran"
            app:startIconDrawable="@drawable/ic_password_fill"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_blue"
        android:fontFamily="@font/chivo_regular"
        android:text="@string/register_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:transitionName="button_tran" />

    <Button
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:fontFamily="@font/chivo_regular"
        android:text="@string/login_here"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:transitionName="login_signup_tran" />

</LinearLayout>