<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/f1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Homepage">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/settings_title"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/settings_subtitle"
        android:textColor="@color/blue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/logout"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textPicture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/chivo_regular"
                        android:text="@string/txt_picture"
                        android:textColor="@color/grey"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/userAvatar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userAvatar"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnChange"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/chivo_regular"
                        android:text="@string/btnChange"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:cornerRadius="80dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/btnRemove"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:fontFamily="@font/chivo_regular"
                        android:text="@string/btnRemove"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:cornerRadius="80dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/text_name"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_name"
                                app:boxCornerRadiusBottomEnd="30dp"
                                app:boxCornerRadiusBottomStart="30dp"
                                app:boxCornerRadiusTopEnd="30dp"
                                app:boxCornerRadiusTopStart="30dp"
                                app:boxStrokeColor="@color/grey">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btnName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/chivo_regular"
                                android:text="@string/btnName"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                app:cornerRadius="80dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/text_username"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_username"
                                app:boxCornerRadiusBottomEnd="30dp"
                                app:boxCornerRadiusBottomStart="30dp"
                                app:boxCornerRadiusTopEnd="30dp"
                                app:boxCornerRadiusTopStart="30dp"
                                app:boxStrokeColor="@color/grey">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btnUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/chivo_regular"
                                android:text="@string/btnUsername"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                app:cornerRadius="80dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:layout_marginTop="10dp"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusTopStart="30dp"
                        app:boxStrokeColor="@color/grey">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:fontFamily="@font/chivo_regular"
                        android:text="@string/btnEmail"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:cornerRadius="80dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:height="60dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/chivo_regular"
        android:text="@string/logout_btn"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>